# ChangeLog for virtual/perl-Time-HiRes
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/virtual/perl-Time-HiRes/ChangeLog,v 1.66 2011/06/09 18:16:53 tove Exp $

*perl-Time-HiRes-1.972.300 (09 Jun 2011)

  09 Jun 2011; Torsten Veller <tove@gentoo.org>
  +perl-Time-HiRes-1.972.300.ebuild:
  Version bump

*perl-Time-HiRes-1.972.200 (19 May 2011)

  19 May 2011; Torsten Veller <tove@gentoo.org>
  +perl-Time-HiRes-1.972.200.ebuild:
  Version bump

  17 Jan 2011; Torsten Veller <tove@gentoo.org>
  -perl-Time-HiRes-1.97.20.ebuild:
  Cleanup

*perl-Time-HiRes-1.97.21 (18 Mar 2010)

  18 Mar 2010; Torsten Veller <tove@gentoo.org>
  +perl-Time-HiRes-1.97.21.ebuild:
  Version bump

*perl-Time-HiRes-1.97.20 (14 Feb 2010)

  14 Feb 2010; Torsten Veller <tove@gentoo.org>
  +perl-Time-HiRes-1.97.20.ebuild:
  Version bump

  17 Jan 2010; Torsten Veller <tove@gentoo.org>
  -perl-Time-HiRes-1.97.07.ebuild, -perl-Time-HiRes-1.97.15.ebuild:
  Cleanup

  07 Jan 2010; Torsten Veller <tove@gentoo.org>
  perl-Time-HiRes-1.97.07.ebuild, perl-Time-HiRes-1.97.15.ebuild,
  perl-Time-HiRes-1.97.19.ebuild:
  Set empty HOMEPAGE and LICENSE

  05 Jan 2010; nixnut <nixnut@gentoo.org> perl-Time-HiRes-1.97.19.ebuild:
  ppc stable #288026

  23 Dec 2009; Fabian Groffen <grobian@gentoo.org>
  perl-Time-HiRes-1.97.19.ebuild:
  Marked ~x86-solaris, bug #296509

  15 Dec 2009; Jonathan Callen <abcd@gentoo.org>
  perl-Time-HiRes-1.97.07.ebuild, perl-Time-HiRes-1.97.15.ebuild,
  perl-Time-HiRes-1.97.19.ebuild:
  QA: Add prefix keywords

  14 Dec 2009; Raúl Porcel <armin76@gentoo.org>
  perl-Time-HiRes-1.97.19.ebuild:
  alpha/ia64/m68k/s390/sh/sparc stable wrt #288026

  10 Dec 2009; Brent Baude <ranger@gentoo.org>
  perl-Time-HiRes-1.97.19.ebuild:
  Marking perl-Time-HiRes-1.97.19 ppc64 stable for bug 288026

  07 Dec 2009; Markus Meier <maekke@gentoo.org>
  perl-Time-HiRes-1.97.19.ebuild:
  arm stable, bug #288026
