@@ -1,6 +1,12 @@
 # ChangeLog for virtual/perl-Time-HiRes
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/virtual/perl-Time-HiRes/ChangeLog,v 1.66 2011/06/09 18:16:53 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/virtual/perl-Time-HiRes/ChangeLog,v 1.67 2011/06/10 11:47:50 tove Exp $
+
+*perl-Time-HiRes-1.972.400 (10 Jun 2011)
+
+  10 Jun 2011; Torsten Veller <tove@gentoo.org>
+  +perl-Time-HiRes-1.972.400.ebuild:
+  Version bump
 
 *perl-Time-HiRes-1.972.300 (09 Jun 2011)
 
